deps/jikjoken-sys/include/jikjoken.h

/* Generated with cbindgen:0.27.0 */

/* Warning: This file is autogenerated by cbindgen. Don't modify manually. */

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

/**
 * Error codes for C FFI
 */
typedef enum JikJokenJikJokenError {
  Success = 0,
  NullPointer = 1,
  InvalidUtf8 = 2,
  InvalidToken = 3,
  EncodeError = 4,
  DecodeError = 5,
  AllocationError = 6,
} JikJokenJikJokenError;

/**
 * Opaque handle to a CoreBPE encoder
 */
typedef struct JikJokenJikJokenEncoding JikJokenJikJokenEncoding;

typedef uint32_t JikJokenRank;

/**
 * Result structure for encode operations
 */
typedef struct JikJokenJikJokenTokens {
  JikJokenRank *tokens;
  uintptr_t length;
} JikJokenJikJokenTokens;

/**
 * Free a JikJokenTokens structure
 */
jikjoken_
void jikjoken_tokens_free(struct JikJokenJikJokenTokens *tokens);

/**
 * Create a new CoreBPE encoding from raw data
 *
 * # Safety
 * - `encoder_keys` and `encoder_values` must be valid pointers to arrays of length `encoder_len`
 * - `special_keys` and `special_values` must be valid pointers to arrays of length `special_len`
 * - `pattern` must be a valid null-terminated UTF-8 string
 * - All string pointers must remain valid for the duration of this call
 */
jikjoken_
int jikjoken_encoding_new(const uint8_t *const *encoder_keys,
                          const uintptr_t *encoder_key_lens,
                          const JikJokenRank *encoder_values,
                          uintptr_t encoder_len,
                          const char *const *special_keys,
                          const JikJokenRank *special_values,
                          uintptr_t special_len,
                          const char *pattern,
                          struct JikJokenJikJokenEncoding **out_handle);

/**
 * Free a JikJokenEncoding handle
 */
jikjoken_
void jikjoken_encoding_free(struct JikJokenJikJokenEncoding *handle);

/**
 * Encode text to tokens (ordinary encoding, no special tokens)
 *
 * # Safety
 * - `handle` must be a valid JikJokenEncoding pointer
 * - `text` must be a valid null-terminated UTF-8 string
 * - `out_tokens` must be a valid pointer to receive the result
 */
jikjoken_
int jikjoken_encode_ordinary(const struct JikJokenJikJokenEncoding *handle,
                             const char *text,
                             struct JikJokenJikJokenTokens **out_tokens);

/**
 * Encode text to tokens with special token control
 *
 * # Safety
 * - `handle` must be a valid JikJokenEncoding pointer
 * - `text` must be a valid null-terminated UTF-8 string
 * - `allowed_special` must be valid null-terminated UTF-8 strings or null pointers
 */
jikjoken_
int jikjoken_encode(const struct JikJokenJikJokenEncoding *handle,
                    const char *text,
                    const char *const *allowed_special,
                    uintptr_t allowed_special_len,
                    struct JikJokenJikJokenTokens **out_tokens);

/**
 * Decode tokens to bytes
 *
 * # Safety
 * - `handle` must be a valid JikJokenEncoding pointer
 * - `tokens` must be a valid pointer to an array of `length` elements
 * - `out_bytes` and `out_length` must be valid pointers
 */
jikjoken_
int jikjoken_decode_bytes(const struct JikJokenJikJokenEncoding *handle,
                          const JikJokenRank *tokens,
                          uintptr_t length,
                          uint8_t **out_bytes,
                          uintptr_t *out_length);

/**
 * Free a byte array returned by jikjoken_decode_bytes
 */
jikjoken_
void jikjoken_bytes_free(uint8_t *bytes,
                         uintptr_t length);

/**
 * Get the special tokens set
 *
 * # Safety
 * - `handle` must be a valid JikJokenEncoding pointer
 * - `out_tokens` and `out_length` must be valid pointers
 */
jikjoken_
int jikjoken_special_tokens(const struct JikJokenJikJokenEncoding *handle,
                            char ***out_tokens,
                            uintptr_t *out_length);

/**
 * Free special tokens array
 */
jikjoken_
void jikjoken_special_tokens_free(char **tokens,
                                  uintptr_t length);

/**
 * Get version information
 */
jikjoken_
const char *jikjoken_version(void);